--- a/.gitignore
+++ b/.gitignore
@@ -38,6 +38,7 @@ ENV/
 .coverage
 htmlcov/
 .tox/
+.mypy_cache/
 
 # Environment
 .env
@@ -51,6 +52,7 @@ htmlcov/
 # Logs
 *.log
 logs/
+agent_logs/
 
 # OS
 .DS_Store
